20070608 csw.c,wav.c: update FSF address (Stuart).
20070609 BRANCH: plusd_20070609
20070617 libspectrum.{c,h.in}: add support for +D disk images (plusd_20070609).
	 (part of patch #1738602).
20070617 merge plusd_20070609 branch into trunk (Stuart).
20070628 make-perl.c: fix compilation on 64-bit systems without glib (Stuart).
20070628 microdrive.c: remove "'static' is not at beginning of declaration"
	 warning with -Wextra (Stuart).
20070628 rzx.c,timings.c: remove missing initializer warnings with -Wextra
	 (Stuart).
20070703 libspectrum.c,tape.c: patches for MorphOS (patch #1746269) (Q-Master).
20070713 test/{invalid.gz,test.c}: add test for bug #1753279.
20070713 libspectrum.c,test/{invalid.gz,test.c}: don't free the wrong things
	 or things that haven't been allocated; add another test case.
20070715 szx.c,test/{invalid.szx,test.c}: check whether the chunk length was
	 so large it caused pointer wraparound (fixes bug #1753938).
20070715 z80.c: free memory used by page with unknown number (fixes bug
	 #1754362).
20070717 tzx_read.c,test/{invalid-gdb.tzx,test.c}: check that GDB data does
	 not extend beyond end of block (fixes bug #1755124).
20070717 tape_block.c,test/{empty-drb.tzx,test.c}: don't segfault on empty
	 DRBs (fixes bug #1755372).
20070717 tzx_read.c,test/{invalid-archiveinfo.tzx,test.c}: free the right thing
	 when unwinding an invalid archive info block (fixes bug #1755539).
20070717 tzx_read.c,test/{invalid-hardwareinfo.tzx,test.c}: free up tape block
	 on invalid hardware info blocks (fixes bug #1755545).
20070719 warajevo_read.c,test/{invalid-warajevo-blockoffset.tap,test.c}: check
         block offset in Warajevo tapes before reading block header (thanks,
         Philip Kendall) (fixes bug #1756375) (Fred).
20070720 warajevo_read.c: try to catch pointer wrap as well (thanks, Philip
         Kendall) (Fred).
20070720 tzx_read.c: fix memory leak on invalid custom data blocks (fixes
	 bug #1757587).